Initial modifications to final presentation, including final block diagram picture

--- a/slides.tex
+++ b/slides.tex
@@ -35,68 +35,68 @@
 \section{Introduction}
 
 % ARQUITECTURA MULTISENSORIAL PARA UN SISTEMA DE MONITOREO Y SUPERVISIÓN DE UNA INTERSECCIÓN VEHICULAR
-\subsection{Context}
-\frame
-{
-	\frametitle{Context}
-	Master's Research Project:\\
-	Multisensor Architecture for a Vehicular Intersection Management System
-}
-\subsection{Problem Statement}
-\frame
-{
-	\frametitle{Transportation Systems}
-	Issues in traditional transportation systems
-	\begin{itemize}
-		\item[-] Congestion
-		\item[-] Traffic rules violation
-		\item[-] Vehicle interaction
-	\end{itemize}
-}
+%\subsection{Context}
+%\frame
+%{
+%	\frametitle{Context}
+%	Master's Research Project:\\
+%	Multisensor Architecture for a Vehicular Intersection Management System
+%}
+%\subsection{Problem Statement}
+%\frame
+%{
+%	\frametitle{Transportation Systems}
+%	Issues in traditional transportation systems
+%	\begin{itemize}
+%		\item[-] Congestion
+%		\item[-] Traffic rules violation
+%		\item[-] Vehicle interaction
+%	\end{itemize}
+%}
 
-\frame
-{
-	\frametitle{Transportation Systems}
-	Issues in traditional transportation systems
-	\begin{itemize}
-		\item[-] Congestion
-		\item[-] Traffic rules violation
-		\item[-] Vehicle interaction
-	\end{itemize}
-	Intersections are critical places in transportation systems
-}
+%\frame
+%{
+%	\frametitle{Transportation Systems}
+%	Issues in traditional transportation systems
+%	\begin{itemize}
+%		\item[-] Congestion
+%		\item[-] Traffic rules violation
+%		\item[-] Vehicle interaction
+%	\end{itemize}
+%	Intersections are critical places in transportation systems
+%}
 
-\frame
-{
-	\frametitle{Intelligent Transportation Systems}
-	Objectives of ITS
-	\begin{itemize}
-		\item[-] Increase safety
-		\item[-] Increase efficiency
-		\item[-] Reduce costs
-	\end{itemize}
-}
+%\frame
+%{
+%	\frametitle{Intelligent Transportation Systems}
+%	Objectives of ITS
+%	\begin{itemize}
+%		\item[-] Increase safety
+%		\item[-] Increase efficiency
+%		\item[-] Reduce costs
+%	\end{itemize}
+%}
 
-\frame
-{
-	\frametitle{Intersection Management Systems}
-	Tasks
-	\begin{itemize}
-		\item[-] Traffic Monitoring
-		\item[-] Traffic Management
-		\item[-] Warning Advertisement
-	\end{itemize}
-}
-
-\frame
-{
-	\frametitle{Intersection Scenario}
-	\begin{itemize}
-		\item[-] Pedestrians, Vehicles (Cars, Two-wheeled vehicles, Big vehicles)
-		\item[-] Recognition, Classification, Tracking
-		\item[-] Incident detection, Intersection Management
-	\end{itemize}
-}
+%\frame
+%{
+%	\frametitle{Intersection Management Systems}
+%	Tasks
+%	\begin{itemize}
+%		\item[-] Traffic Monitoring
+%		\item[-] Traffic Management
+%		\item[-] Warning Advertisement
+%	\end{itemize}
+%}
+%
+%\frame
+%{
+%	\frametitle{Intersection Scenario}
+%	\begin{itemize}
+%		\item[-] Pedestrians, Vehicles (Cars, Two-wheeled vehicles, Big vehicles)
+%		\item[-] Recognition, Classification, Tracking
+%		\item[-] Incident detection, Intersection Management
+%	\end{itemize}
+%}
 %\subsection{Objectives}
 %
 %\frame
@@ -223,8 +223,8 @@
 %	\emph{Objective 4 is out of the scope of this class.}
 %}
 
-\subsection{Aims and Conditions}
-\subsubsection*{Aims}
+%\subsection{Aims and Conditions}
+\subsection{Aims}
 \frame{
 	\frametitle{Main Objective}
 	- To develop a feature extraction and pattern recognition laser-based module for an intersection management system 
@@ -238,66 +238,66 @@
 		\item<4->[-] Evaluate implemented module and compare it with similar developments
 	\end{itemize}
 }
-\subsubsection*{Conditions}
+\subsection{Conditions}
 \frame{
 	\frametitle{Conditions}
 	\begin{itemize}
 		\item<1->[-] The information source will be a dataset.
-		\item<2->[-] \textcolor{purple}{[New!] Just one laser}.
+		\item<2->[-] Just one laser.
 	\end{itemize}
 }
 
-\section*{Similar Projects}
-\frame
-{
-	\frametitle{Research Groups}
-	\begin{itemize}
-		\item[-] PKU Omni Smart Sensing (POSS) Research group at Peking University (POSS-i project)
-		\item[-] Institute of Measurement, Control and Microtechnology at Ulm University (Ko-PER program)
-		%Forschungsinitiative Ko-FAS from Bundesministerium für wirtschaft und Technologie (Germany)
-	\end{itemize}
-}
+\subsection{Similar Projects}
+%\frame
+%{
+%	\frametitle{Research Groups}
+%	\begin{itemize}
+%		\item[-] PKU Omni Smart Sensing (POSS) Research group at Peking University (POSS-i project)
+%		\item[-] Institute of Measurement, Control and Microtechnology at Ulm University (Ko-PER program)
+%		%Forschungsinitiative Ko-FAS from Bundesministerium für wirtschaft und Technologie (Germany)
+%	\end{itemize}
+%}
+%
+%\subsection*{POSS-i}
+%\frame
+%{
+%	\frametitle{PKU Omni Smart Sensing (POSS)}
+%	\begin{itemize}
+%		\item[-] POSS is leaded by Prof. Huijing Zhao, Ph.D.
+%		\item[-] Focus on perception technologies using an intelligent vehicle, a network sensing system or a collaboration of them
+%	\end{itemize}
+%}
+%\frame
+%{
+%	\frametitle{POSS-i}	
+%	\begin{figure}
+%		\includegraphics[scale=0.4]{fig/possi.png}
+%		\caption{POSS-i project. [Zhao09][Zhao12][Song13b]}
+%	\end{figure}
+%}
+%
+%
+%\subsection*{Ko-PER}
+%\frame
+%{
+%	\frametitle{Ko-PER}
+%	\begin{itemize}
+%		\item[-] Ko-PER from Cooperative Perception
+%		\item[-] Included in Forschungsinitiative Ko-FAS from Bundesministerium für wirtschaft und Technologie (Germany)
+%		\item[-] Cooperative and collaborative sensors system for perception and preventive road safety.
+%		\item[-] Daniel Meissen from Ulm University as leader researcher.
+%	\end{itemize}
+%}
+%\frame
+%{
+%	\frametitle{Projects}	
+%	\begin{figure}
+%		\includegraphics[scale=0.4]{fig/meiss1.png}
+%		\caption{3D-recreated intersection scene with laser beams depicted [Meissner12, 13a, 13b, 13c, 14][Striegel13]}
+%	\end{figure}
+%}
 
-\subsection*{POSS-i}
-\frame
-{
-	\frametitle{PKU Omni Smart Sensing (POSS)}
-	\begin{itemize}
-		\item[-] POSS is leaded by Prof. Huijing Zhao, Ph.D.
-		\item[-] Focus on perception technologies using an intelligent vehicle, a network sensing system or a collaboration of them
-	\end{itemize}
-}
-\frame
-{
-	\frametitle{POSS-i}	
-	\begin{figure}
-		\includegraphics[scale=0.4]{fig/possi.png}
-		\caption{POSS-i project. [Zhao09][Zhao12][Song13b]}
-	\end{figure}
-}
-
-
-\subsection*{Ko-PER}
-\frame
-{
-	\frametitle{Ko-PER}
-	\begin{itemize}
-		\item[-] Ko-PER from Cooperative Perception
-		\item[-] Included in Forschungsinitiative Ko-FAS from Bundesministerium für wirtschaft und Technologie (Germany)
-		\item[-] Cooperative and collaborative sensors system for perception and preventive road safety.
-		\item[-] Daniel Meissen from Ulm University as leader researcher.
-	\end{itemize}
-}
-\frame
-{
-	\frametitle{Projects}	
-	\begin{figure}
-		\includegraphics[scale=0.4]{fig/meiss1.png}
-		\caption{3D-recreated intersection scene with laser beams depicted [Meissner12, 13a, 13b, 13c, 14][Striegel13]}
-	\end{figure}
-}
-
-\subsection*{Methods And Techniques}
+\subsubsection*{Methods And Techniques}
 \frame
 {
 	\frametitle{Applications, Methods and Techniques}
@@ -374,8 +374,8 @@
 	}
 }
 
-\section{Proposed Solution}
-\subsection{Block Diagrams}
+\section{Solution Description}
+\subsection{Introduction}
 \frame{
 	\frametitle{Typical System for one source of data}	
 	\begin{figure}
@@ -383,47 +383,47 @@
 		\caption{Single source system block diagram}
 	\end{figure}
 }
-\frame{
-	\frametitle{Multisensor Data System}	
-	\begin{figure}
-		\includegraphics[scale=0.3]{fig/TypApp2.png}
-		\caption{Multisensor system block diagram}
-	\end{figure}
-}
-\frame{
-	\frametitle{How to fuse information?}	
-	\begin{figure}
-		\includegraphics[scale=0.3]{fig/TypApp2q.png}
-		\caption{Multisensor system block diagram}
-	\end{figure}
-}
-\frame{
-	\frametitle{Fusion Levels}	
-	\begin{figure}
-		\includegraphics[scale=0.3]{fig/fusionLevels.png}
-		\caption{Fusion Levels [Luo11]}
-	\end{figure}
-}
-\frame{
-	\frametitle{Fusion Algorithms}	
-	\begin{figure}
-		\includegraphics[scale=0.3]{fig/fusionAlg.png}
-		\caption{Classification of Fusion Algorithms [Luo11]}
-	\end{figure}
-}
-\subsection{Video Processing}
-\frame{
-	\frametitle{Video-Based System Block Diagram}
-	\begin{figure}
-		\includegraphics[scale=0.4]{fig/proposal1.png}
-	\end{figure}
-}
-\frame{
-	\frametitle{Video-Based System Block Diagram}
-	\begin{figure}
-		\includegraphics[scale=0.4]{fig/proposal1tech.png}
-	\end{figure}
-}
+%\frame{
+%	\frametitle{Multisensor Data System}	
+%	\begin{figure}
+%		\includegraphics[scale=0.3]{fig/TypApp2.png}
+%		\caption{Multisensor system block diagram}
+%	\end{figure}
+%}
+%\frame{
+%	\frametitle{How to fuse information?}	
+%	\begin{figure}
+%		\includegraphics[scale=0.3]{fig/TypApp2q.png}
+%		\caption{Multisensor system block diagram}
+%	\end{figure}
+%}
+%\frame{
+%	\frametitle{Fusion Levels}	
+%	\begin{figure}
+%		\includegraphics[scale=0.3]{fig/fusionLevels.png}
+%		\caption{Fusion Levels [Luo11]}
+%	\end{figure}
+%}
+%\frame{
+%	\frametitle{Fusion Algorithms}	
+%	\begin{figure}
+%		\includegraphics[scale=0.3]{fig/fusionAlg.png}
+%		\caption{Classification of Fusion Algorithms [Luo11]}
+%	\end{figure}
+%}
+%\subsection{Video Processing}
+%\frame{
+%	\frametitle{Video-Based System Block Diagram}
+%	\begin{figure}
+%		\includegraphics[scale=0.4]{fig/proposal1.png}
+%	\end{figure}
+%}
+%\frame{
+%	\frametitle{Video-Based System Block Diagram}
+%	\begin{figure}
+%		\includegraphics[scale=0.4]{fig/proposal1tech.png}
+%	\end{figure}
+%}
 \subsection{Laser Processing}
 \frame{
 	\frametitle{Laser-Based System Block Diagram}
@@ -436,6 +436,13 @@
 	\begin{figure}
 		\includegraphics[scale=0.4]{fig/proposalLaserTech.png}
 		\caption{Based on [Zhao06]}
+	\end{figure}
+}
+
+\frame{
+	\frametitle{System Description}
+	\begin{figure}
+		\includegraphics[scale=0.4]{fig/finalblockdiagram.png}
 	\end{figure}
 }
 
